bindings/c/whiteout_m2.h

typedef struct whiteout_M2WaterfallData whiteout_M2WaterfallData;
typedef struct whiteout_M2ParticleGeosetData whiteout_M2ParticleGeosetData;
typedef struct whiteout_M2EdgeFadeData whiteout_M2EdgeFadeData;
/* ── M2WaterfallData ─────────────────────────────────────────────── */

whiteout_M2WaterfallData* whiteout_m2_M2WaterfallData_new(void);
void whiteout_m2_M2WaterfallData_delete(whiteout_M2WaterfallData* self);
float whiteout_m2_M2WaterfallData_get_bumpScale(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_bumpScale(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_x(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_x(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_z(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_z(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value1_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value1_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value1_x(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value1_x(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value1_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value1_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value2_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value2_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value3_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value3_x(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_x(whiteout_M2WaterfallData* self, float value);
whiteout_Vector4f* whiteout_m2_M2WaterfallData_get_baseColor(whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_baseColor(whiteout_M2WaterfallData* self, const whiteout_Vector4f* value);
uint16_t whiteout_m2_M2WaterfallData_get_flags(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_flags(whiteout_M2WaterfallData* self, uint16_t value);
uint16_t whiteout_m2_M2WaterfallData_get_unknown0(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown0(whiteout_M2WaterfallData* self, uint16_t value);
float whiteout_m2_M2WaterfallData_get_value3_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value3_z(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_z(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value4_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value4_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown1(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown1(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown2(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown2(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown3(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown3(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown4(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown4(whiteout_M2WaterfallData* self, float value);
/* ── M2ParticleGeosetData ─────────────────────────────────────────────── */

whiteout_M2ParticleGeosetData* whiteout_m2_M2ParticleGeosetData_new(void);
void whiteout_m2_M2ParticleGeosetData_delete(whiteout_M2ParticleGeosetData* self);
uint16_t whiteout_m2_M2ParticleGeosetData_get_geoset(const whiteout_M2ParticleGeosetData* self);
void whiteout_m2_M2ParticleGeosetData_set_geoset(whiteout_M2ParticleGeosetData* self, uint16_t value);
/* ── M2EdgeFadeData ─────────────────────────────────────────────── */

whiteout_M2EdgeFadeData* whiteout_m2_M2EdgeFadeData_new(void);
void whiteout_m2_M2EdgeFadeData_delete(whiteout_M2EdgeFadeData* self);
size_t whiteout_m2_M2EdgeFadeData_value0_size(void);
float whiteout_m2_M2EdgeFadeData_get_value0_at(const whiteout_M2EdgeFadeData* self, size_t index);
void whiteout_m2_M2EdgeFadeData_set_value0_at(whiteout_M2EdgeFadeData* self, size_t index, float value);
float whiteout_m2_M2EdgeFadeData_get_value8(const whiteout_M2EdgeFadeData* self);
void whiteout_m2_M2EdgeFadeData_set_value8(whiteout_M2EdgeFadeData* self, float value);
size_t whiteout_m2_M2EdgeFadeData_valueC_size(void);
uint8_t whiteout_m2_M2EdgeFadeData_get_valueC_at(const whiteout_M2EdgeFadeData* self, size_t index);
void whiteout_m2_M2EdgeFadeData_set_valueC_at(whiteout_M2EdgeFadeData* self, size_t index, uint8_t value);