bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2WaterfallData --
    public static final MethodHandle whiteout_m2_M2WaterfallData_new = find(
        "whiteout_m2_M2WaterfallData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_delete = find(
        "whiteout_m2_M2WaterfallData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_bumpScale = find("whiteout_m2_M2WaterfallData_get_bumpScale", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_bumpScale = find("whiteout_m2_M2WaterfallData_set_bumpScale", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value0_x = find("whiteout_m2_M2WaterfallData_get_value0_x", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value0_x = find("whiteout_m2_M2WaterfallData_set_value0_x", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value0_y = find("whiteout_m2_M2WaterfallData_get_value0_y", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value0_y = find("whiteout_m2_M2WaterfallData_set_value0_y", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value0_z = find("whiteout_m2_M2WaterfallData_get_value0_z", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value0_z = find("whiteout_m2_M2WaterfallData_set_value0_z", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value1_w = find("whiteout_m2_M2WaterfallData_get_value1_w", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value1_w = find("whiteout_m2_M2WaterfallData_set_value1_w", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value0_w = find("whiteout_m2_M2WaterfallData_get_value0_w", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value0_w = find("whiteout_m2_M2WaterfallData_set_value0_w", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value1_x = find("whiteout_m2_M2WaterfallData_get_value1_x", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value1_x = find("whiteout_m2_M2WaterfallData_set_value1_x", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value1_y = find("whiteout_m2_M2WaterfallData_get_value1_y", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value1_y = find("whiteout_m2_M2WaterfallData_set_value1_y", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value2_w = find("whiteout_m2_M2WaterfallData_get_value2_w", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value2_w = find("whiteout_m2_M2WaterfallData_set_value2_w", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value3_y = find("whiteout_m2_M2WaterfallData_get_value3_y", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value3_y = find("whiteout_m2_M2WaterfallData_set_value3_y", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value3_x = find("whiteout_m2_M2WaterfallData_get_value3_x", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value3_x = find("whiteout_m2_M2WaterfallData_set_value3_x", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_baseColor = find("whiteout_m2_M2WaterfallData_get_baseColor", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_baseColor = find("whiteout_m2_M2WaterfallData_set_baseColor", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_flags = find("whiteout_m2_M2WaterfallData_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_flags = find("whiteout_m2_M2WaterfallData_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_unknown0 = find("whiteout_m2_M2WaterfallData_get_unknown0", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_unknown0 = find("whiteout_m2_M2WaterfallData_set_unknown0", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value3_w = find("whiteout_m2_M2WaterfallData_get_value3_w", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value3_w = find("whiteout_m2_M2WaterfallData_set_value3_w", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value3_z = find("whiteout_m2_M2WaterfallData_get_value3_z", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value3_z = find("whiteout_m2_M2WaterfallData_set_value3_z", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_value4_y = find("whiteout_m2_M2WaterfallData_get_value4_y", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_value4_y = find("whiteout_m2_M2WaterfallData_set_value4_y", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_unknown1 = find("whiteout_m2_M2WaterfallData_get_unknown1", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_unknown1 = find("whiteout_m2_M2WaterfallData_set_unknown1", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_unknown2 = find("whiteout_m2_M2WaterfallData_get_unknown2", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_unknown2 = find("whiteout_m2_M2WaterfallData_set_unknown2", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_unknown3 = find("whiteout_m2_M2WaterfallData_get_unknown3", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_unknown3 = find("whiteout_m2_M2WaterfallData_set_unknown3", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2WaterfallData_get_unknown4 = find("whiteout_m2_M2WaterfallData_get_unknown4", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2WaterfallData_set_unknown4 = find("whiteout_m2_M2WaterfallData_set_unknown4", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));

    // -- M2ParticleGeosetData --
    public static final MethodHandle whiteout_m2_M2ParticleGeosetData_new = find(
        "whiteout_m2_M2ParticleGeosetData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleGeosetData_delete = find(
        "whiteout_m2_M2ParticleGeosetData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleGeosetData_get_geoset = find("whiteout_m2_M2ParticleGeosetData_get_geoset", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ParticleGeosetData_set_geoset = find("whiteout_m2_M2ParticleGeosetData_set_geoset", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));

    // -- M2EdgeFadeData --
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_new = find(
        "whiteout_m2_M2EdgeFadeData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_delete = find(
        "whiteout_m2_M2EdgeFadeData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_value0_size = find("whiteout_m2_M2EdgeFadeData_value0_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_get_value0_at = find("whiteout_m2_M2EdgeFadeData_get_value0_at", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_set_value0_at = find("whiteout_m2_M2EdgeFadeData_set_value0_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_get_value8 = find("whiteout_m2_M2EdgeFadeData_get_value8", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_set_value8 = find("whiteout_m2_M2EdgeFadeData_set_value8", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_valueC_size = find("whiteout_m2_M2EdgeFadeData_valueC_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_get_valueC_at = find("whiteout_m2_M2EdgeFadeData_get_valueC_at", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2EdgeFadeData_set_valueC_at = find("whiteout_m2_M2EdgeFadeData_set_valueC_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BYTE));
